<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.ac51.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/oblako"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorBar"
                android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblako_name"
                style="@style/OblakoBar"
                android:id="@+id/oblako_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblako_adress"
                style="@style/OblakoAdress"
                android:id="@+id/oblako_adress"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblako_work"
                style="@style/OblakoAdressSecond"
                android:layout_marginTop="60dp"
                android:id="@+id/oblako_work"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblako_work_time"
                style="@style/OblakoAdress"
                android:layout_toRightOf="@+id/oblako_work"
                android:layout_marginTop="60dp"
                android:paddingLeft="5dp"/>
                <!--android:textStyle="bold"/>-->
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBarSecond"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hookah"
                style="@style/OblakoAdress"
                android:paddingLeft="50dp"
                android:id="@+id/hookah"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblaco_dop"
                style="@style/OblakoAdressSecond"
                android:layout_toRightOf="@id/hookah"
                android:paddingLeft="10dp"
                android:id="@+id/oblako_dop"/>
                <!--android:paddingLeft="125dp"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_hookah"
                style="@style/OblakoPrice"
                android:layout_toRightOf="@+id/oblako_dop"
                android:paddingLeft="10dp"
                android:id="@+id/price_hookah"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea"
                style="@style/OblakoAdress"
                android:layout_toRightOf="@id/price_hookah"
                android:paddingLeft="15dp"
                android:id="@+id/tea"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oblaco_dop"
                style="@style/OblakoAdressSecond"
                android:layout_toRightOf="@id/tea"
                android:paddingLeft="10dp"
                android:id="@+id/oblako_dop_sec" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_tea"
                style="@style/OblakoPrice"
                android:layout_toRightOf="@+id/oblako_dop_sec"
                android:paddingLeft="10dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorBar"
            android:padding="10dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:id="@+id/phone"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/email"
                android:id="@+id/email"
                android:layout_toRightOf="@+id/location"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBarSecond"
            android:padding="20dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/people"
                android:id="@+id/new_people"
                android:textSize="27sp"
                android:alpha="0.8"
                android:background="#ffc14d"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
